--- a/contract_pricing_app/src/assets/css/main.css
+++ b/contract_pricing_app/src/assets/css/main.css
@@ -2176,11 +2176,10 @@ input, select, textarea {
 
 	#header {
 		position: relative;
-		background-image: url("../../images/header.jpg");
 		background-size: cover;
 		background-position: center center;
 		background-attachment: fixed;
-		color: #fff;
+		color: #000;
 		text-align: center;
 		padding: 7.5em 0 2em 0;
 		cursor: default;
@@ -2964,7 +2963,6 @@ input, select, textarea {
 					top: 0;
 					width: 100%;
 					height: 100%;
-					background: url("images/overlay.png");
 					background-size: 128px 128px;
 				}
 
