--- a/contract_pricing_app/src/assets/css/main.css
+++ b/contract_pricing_app/src/assets/css/main.css
@@ -56,7 +56,7 @@ body {
 }
 
 mark {
-	background-color: transparent;
+	background-color: #fa8320;
 	color: inherit;
 }
 
@@ -83,7 +83,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #f0f4f4;
+		background: #fa8320;
 		color: #5b5b5b;
 		font-size: 15pt;
 		line-height: 1.85em;
@@ -130,11 +130,11 @@ input, select, textarea {
 	}
 
 	h3 {
-		font-size: 1.25em;
+		font-size: 1.7em;
 	}
 
 	h4 {
-		font-size: 1em;
+		font-size: 1.7em;
 		margin: 0 0 0.25em 0;
 	}
 
@@ -2233,12 +2233,12 @@ input, select, textarea {
 		#header hr {
 			top: 1.5em;
 			margin-bottom: 3em;
-			border-bottom-color: rgba(192, 192, 192, 0.35);
-			box-shadow: inset 0 1px 0 0 rgba(192, 192, 192, 0.35);
+			border-bottom-color: rgba(250, 131, 32, 0.35);
+			box-shadow: inset 0 1px 0 0 rgba(250, 131, 32, 0.35);
 		}
 
 			#header hr:before, #header hr:after {
-				background: rgba(192, 192, 192, 0.35);
+				background: rgba(250, 131, 32, 0.35);
 			}
 
 		#header footer {
@@ -2284,7 +2284,7 @@ input, select, textarea {
 		position: absolute;
 		top: 0;
 		left: 0;
-		width: 100%;
+		width: 100vw;
 		text-align: center;
 		padding: 1.5em 0 1.5em 0;
 		z-index: 1;
@@ -2296,9 +2296,9 @@ input, select, textarea {
 			position: relative;
 			display: inline-block;
 			margin: 0;
-			height: 21px;
-			border-left: solid 1px rgba(192, 192, 192, 0.35);
-			border-right: solid 1px rgba(192, 192, 192, 0.35);
+			height: 0px;
+			border-left: solid 5px rgba(250, 131, 32, 0.35);
+			border-right: solid 5px rgba(250, 131, 32, 0.35);
 		}
 
 			#nav > ul:before, #nav > ul:after {
@@ -2308,9 +2308,9 @@ input, select, textarea {
 				position: absolute;
 				top: 50%;
 				margin-top: -2px;
-				height: 5px;
-				border-top: solid 1px rgba(192, 192, 192, 0.35);
-				border-bottom: solid 1px rgba(192, 192, 192, 0.35);
+				height: 0px;
+				border-top: solid 5px rgba(250, 131, 32, 0.35);
+				border-bottom: solid 5px rgba(250, 131, 32, 0.35);
 			}
 
 			#nav > ul:before {
@@ -2336,7 +2336,7 @@ input, select, textarea {
 			}
 
 				#nav > ul > li.active {
-					border-color: rgba(192, 192, 192, 0.35);
+					border-color: rgba(250, 131, 32, 0.35);
 				}
 
 				#nav > ul > li > a, #nav > ul > li > span {
@@ -2525,7 +2525,7 @@ input, select, textarea {
 				width: 6em;
 				height: 6em;
 				border-radius: 100%;
-				background-color: rgba(72, 57, 73, 0.5);
+				background-color: rgba(250, 131, 32, 0.5);
 				position: absolute;
 				top: 50%;
 				margin-top: -3em;
@@ -2548,7 +2548,7 @@ input, select, textarea {
 			}
 
 			.carousel .forward:hover:before, .carousel .backward:hover:before {
-				background-color: rgba(239, 131, 118, 0.75);
+				background-color: rgba(250, 131, 32, 0.75);
 			}
 
 		.carousel .forward {
@@ -2917,7 +2917,7 @@ input, select, textarea {
 						color: rgba(255, 255, 255, 0.75);
 						text-align: center;
 						display: block;
-						font-size: 14px;
+						font-size: 20px;
 						width: 80px;
 						height: 30px;
 						line-height: 30px;
